--- a/babel-plugin-log/package.json
+++ b/babel-plugin-log/package.json
@@ -8,6 +8,7 @@
     "build": "node index.js"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
     "@babel/generator": "^7.15.4",
     "@babel/parser": "^7.15.7",
     "@babel/traverse": "^7.15.4",
